fix overflow

--- a/src/components/PhotosBlock/swiper/ProductPhotoSwiper.scss
+++ b/src/components/PhotosBlock/swiper/ProductPhotoSwiper.scss
@@ -81,7 +81,7 @@
       height: 100%;
       min-width: 49px;
       max-width: 49px;
-      overflow: hidden;
+      overflow-x: hidden;
     }
 
     @include on-desktop {
